hard-gists/e1b58ad5ff33c697ae83d83fdbab76e4/run.log
=== Docker Run Log for e1b58ad5ff33c697ae83d83fdbab76e4 ===
Started at: Mi 29. Okt 20:39:46 CET 2025

[2025-10-29 20:39:46] START: Running container for e1b58ad5ff33c697ae83d83fdbab76e4
[2025-10-29 20:39:46] SUCCESS: Container 98b3705ddfe86a8f01d2a0ad73220fd6bb84eb9bc2460e50d20a96d5a726ff32 started for e1b58ad5ff33c697ae83d83fdbab76e4
=== Container logs for e1b58ad5ff33c697ae83d83fdbab76e4 ===
  File "/snippet.py", line 82
    print "--"*200
    ^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for e1b58ad5ff33c697ae83d83fdbab76e4 ===
[2025-10-29 20:39:48] INFO: Container 98b3705ddfe86a8f01d2a0ad73220fd6bb84eb9bc2460e50d20a96d5a726ff32 has stopped
